Rename title from "ESP32 installer" to "Web Serial Installer"

--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
   </head>
   <body>
     <div class="content">
-      <h1>ESP32 installer</h1>
+      <h1>Web Serial Installer</h1>
       <p>Select your product</p>
       <ul class="radios">
         <li>
